# mix-trap

./: README.md  pyproject.toml
modules/conversation/: conversation.py  router.py
modules/experts/: anchorman.py  base_speaker.py  expert.py  facts_checker.py  moderator.py
modules/llm/: async_groq_mistral.py  async_mistral.py  mistral.py
modules/news/: get_news.py  news.py  news_api.py  news_api_domains.py  perplexity.py  process_user_input.py
modules/playlist_generator/: playlist_generator.py
modules/report/: report.py
spotify-playlist-generator/: playlist_generator.py  prova.py
